[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Main.gd" type="Script" id=1]
[ext_resource path="res://fonts/BAUHS93.TTF" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Level" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_lock_": true
}

[node name="Level1" type="Button" parent="Level"]
margin_left = 128.0
margin_top = 128.0
margin_right = 194.0
margin_bottom = 192.0
text = "Level 1"

[node name="Level2" type="Button" parent="Level"]
margin_left = 256.0
margin_top = 128.0
margin_right = 320.0
margin_bottom = 196.0
text = "Level 2"

[node name="Level3" type="Button" parent="Level"]
margin_left = 384.0
margin_top = 128.0
margin_right = 448.0
margin_bottom = 192.0
text = "Level 3"

[node name="Level4" type="Button" parent="Level"]
margin_left = 512.0
margin_top = 128.0
margin_right = 576.0
margin_bottom = 192.0
text = "Level 4"

[node name="Level5" type="Button" parent="Level"]
margin_left = 640.0
margin_top = 128.0
margin_right = 704.0
margin_bottom = 192.0
text = "Level 5"

[node name="Back" type="Button" parent="Level"]
margin_left = 448.0
margin_top = 512.0
margin_right = 576.0
margin_bottom = 544.0
text = "Back"

[node name="MainMenu" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_lock_": true
}

[node name="Play" type="Button" parent="MainMenu"]
margin_left = 416.0
margin_top = 192.0
margin_right = 608.0
margin_bottom = 256.0
text = "Play"

[node name="Quit" type="Button" parent="MainMenu"]
margin_left = 416.0
margin_top = 320.0
margin_right = 608.0
margin_bottom = 384.0
text = "Quit"

[node name="PausedMenu" type="CanvasLayer" parent="."]
layer = 10
visible = false

[node name="BG1" type="ColorRect" parent="PausedMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="BG2" type="ColorRect" parent="PausedMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -192.0
margin_right = 320.0
margin_bottom = 192.0
color = Color( 0.247059, 0.235294, 0.235294, 1 )

[node name="Label" type="Label" parent="PausedMenu/BG2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -112.0
margin_top = 20.0
margin_right = 112.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "PAUSED"
align = 1
uppercase = true
percent_visible = -0.166667

[node name="ResumeBtn" type="Button" parent="PausedMenu/BG2"]
margin_right = 12.0
margin_bottom = 20.0

[node name="QuitBtn" type="Button" parent="PausedMenu/BG2"]
margin_right = 12.0
margin_bottom = 20.0

[connection signal="pressed" from="Level/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="Level/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="Level/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="Level/Level4" to="." method="_on_Level4_pressed"]
[connection signal="pressed" from="Level/Level5" to="." method="_on_Level5_pressed"]
[connection signal="pressed" from="Level/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="MainMenu/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MainMenu/Quit" to="." method="_on_Quit_pressed"]
